--- a/exec/css/index.css
+++ b/exec/css/index.css
@@ -11,14 +11,14 @@ body{
     border-radius: 5px;
     margin-top: 7px;
     margin-bottom: 7px;
-    background-color: rgb(77,222,110);
+    background-color: rgb(222,222,110);
     padding: 3px;
 }
 /*Caixa de texto 1*/
 .caixa1{
     border-radius: 5px;
     margin: 3px;
-    border: solid 3px darkgreen;
+    border: solid 3px rgb(120,120,2);
     height: 21px;
 }
 /*Botão Confirmar*/
@@ -26,7 +26,7 @@ body{
     border-radius: 5px;
     margin: 3px;
     height: 33px;
-    background-color: darkgreen;
+    background-color: rgb(120,120,2);
     color: #fff;
     font-weight: bold;
     font-size: 1.2rem;
@@ -37,17 +37,24 @@ body{
     color: darkgreen;
 }
 .enviar:active{
-    background: gold;
-    color: darkgreen;
+    background: rgb(120,120,2);
+    color: #fff;
+    text-shadow: -2px 1.5px 3px #000;
 }
 /*Título do form1*/
 .tituloForm1{
     text-align: center;
     font-family: 'Finger Paint' ,sans-serif;
-    color: darkgreen;    
+    color: rgb(222,222,110);
+    text-shadow: -1px 1px 0px rgb(120,120,2);
+    background-color: rgb(120,120,2, 33%);
+    margin-right: -0.2rem;
+    margin-left: -0.2rem;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
 }
 .tituloForm2{
-    text-align: justify;
+    text-align: center;
     font-family: 'Finger Paint' ,sans-serif;
-    color: #fff;    
+    color: rgb(222,222,110);    
 }
